--- a/index.html
+++ b/index.html
@@ -871,14 +871,40 @@
                     <!-- Single events -->
                     <div class="events-info">
                         <div class="events-img">
-                            <img src="img/events/01.jpg" alt="">
+                            <img src="img/about/st.JPG" alt="">
                             <div class="events-post-date-info">
-                                <span>26</span> feb/18
+                                <span>29</span> September
                             </div>
                         </div>
                         <div class="events-content">
                             <a href="#">
-                                <h2>event tittle here</h2>
+                                <h2>STEMtastic Saturday</h2>
+                            </a>
+                            <div class="events-post-meta">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i> at 5.00pm - 8.00pm</a></li>
+                                    <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>new yourk</a></li>
+                                </ul>
+                            </div>
+                            <p>We care for children, protect their welfare, and prepare them for the future.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 col-sm-6">
+                    <!-- Single events -->
+                    <div class="events-info">
+                        <div class="events-img">
+                            <img src="img/about/food.JPG" alt="">
+                            <div class="events-post-date-info">
+                                <span>12</span> October/18
+
+                            </div>
+                        </div>
+                        <div class="events-content">
+                            <a href="#">
+                                <h2>Feeding the community with H.O.M.E.S, Inc.</h2>
                             </a>
                             <div class="events-post-meta">
                                 <ul>
@@ -894,37 +920,14 @@
                     <!-- Single events -->
                     <div class="events-info">
                         <div class="events-img">
-                            <img src="img/events/02.jpg" alt="">
+                            <img src="img/about/st2.JPG" alt="">
                             <div class="events-post-date-info">
-                                <span>26</span> feb/18
+                                <span>13</span> October/18
                             </div>
                         </div>
                         <div class="events-content">
                             <a href="#">
-                                <h2>event tittle here</h2>
-                            </a>
-                            <div class="events-post-meta">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i> at 5.00pm - 8.00pm</a></li>
-                                    <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>new yourk</a></li>
-                                </ul>
-                            </div>
-                            <p>We care for children, protect their welfare, and prepare them for the future.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <!-- Single events -->
-                    <div class="events-info">
-                        <div class="events-img">
-                            <img src="img/events/03.jpg" alt="">
-                            <div class="events-post-date-info">
-                                <span>26</span> feb/18
-                            </div>
-                        </div>
-                        <div class="events-content">
-                            <a href="#">
-                                <h2>event tittle here</h2>
+                                <h2>STEMtastic Saturday</h2>
                             </a>
                             <div class="events-post-meta">
                                 <ul>
