--- a/index.html
+++ b/index.html
@@ -652,80 +652,80 @@
         <div class="iso-content">
             <!-- Single gallery -->
             <div class="single-gallery iso-item helping charity">
-                <img src="img/gallery/01.jpg" alt="">
+                <img src="img/gallery/s1.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>gallery title.</h2>
-                    <a href="img/gallery/01.jpg" data-lightbox="example-set" data-title="conscare">
+                    <a href="img/gallery/s1.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item foods events mechanical">
-                <img src="img/gallery/02.jpg" alt="">
+                <img src="img/gallery/s2.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>gallery title.</h2>
-                    <a href="img/gallery/02.jpg" data-lightbox="example-set" data-title="conscare">
+                    <a href="img/gallery/s2.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item helping events biology">
-                <img src="img/gallery/03.jpg" alt="">
+                <img src="img/gallery/s3.JPG" alt="">
                 <div class="gallery-lightbox">
-                    <h2>gallery title.</h2>
-                    <a href="img/gallery/03.jpg" data-lightbox="example-set" data-title="conscare">
+                    <h2>Adopt a Meal with Ronald McDonald’s House Providing meals for families with terminally ill children.</h2>
+                    <a href="img/gallery/s3.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item foods mechanical">
-                <img src="img/gallery/04.jpg" alt="">
+                <img src="img/gallery/s4.JPG" alt="">
                 <div class="gallery-lightbox">
-                    <h2>gallery title.</h2>
-                    <a href="img/gallery/04.jpg" data-lightbox="example-set" data-title="conscare">
+                    <h2>Young men from the SEED School. Students made LED cards for Mother’s Day.</h2>
+                    <a href="img/gallery/s4.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item helping mechanical biology">
-                <img src="img/gallery/05.jpg" alt="">
+                <img src="img/gallery/s5.jpg" alt="">
                 <div class="gallery-lightbox">
-                    <h2>gallery title.</h2>
-                    <a href="img/gallery/05.jpg" data-lightbox="example-set" data-title="conscare">
+                    <h2>Kids from Miami and Broward participated in a game of baseball with the Miami Marlins during the Kids’ Get Hip and Fit Fair.</h2>
+                    <a href="img/gallery/s5.jpg" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item charity">
-                <img src="img/gallery/06.jpg" alt="">
+                <img src="img/gallery/s6.jpg" alt="">
                 <div class="gallery-lightbox">
-                    <h2>gallery title.</h2>
-                    <a href="img/gallery/06.jpg" data-lightbox="example-set" data-title="conscare">
+                    <h2>Robotics: Students used a VEX robot to make a catapult and competed in a friendly game of corn hole.</h2>
+                    <a href="img/gallery/s6.jpg" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item charity biology">
-                <img src="img/gallery/07.jpg" alt="">
+                <img src="img/gallery/s7.jpg" alt="">
                 <div class="gallery-lightbox">
-                    <h2>gallery title.</h2>
-                    <a href="img/gallery/07.jpg" data-lightbox="example-set" data-title="conscare">
+                    <h2>Miami Beach Police Athlete League (PAL) partners with S.E.E.K. for Kids’ Get Hip and For Fair</h2>
+                    <a href="img/gallery/s7.jpg" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item charity">
-                <img src="img/gallery/08.jpg" alt="">
+                <img src="img/gallery/s8.jpg" alt="">
                 <div class="gallery-lightbox">
-                    <h2>gallery title.</h2>
-                    <a href="img/gallery/08.jpg" data-lightbox="example-set" data-title="conscare">
+                    <h2>Having fun learning science!</h2>
+                    <a href="img/gallery/s8.jpg" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
