--- a/index.html
+++ b/index.html
@@ -692,40 +692,40 @@
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item helping mechanical biology">
-                <img src="img/gallery/s5.jpg" alt="">
+                <img src="img/gallery/s5.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>Kids from Miami and Broward participated in a game of baseball with the Miami Marlins during the Kids’ Get Hip and Fit Fair.</h2>
-                    <a href="img/gallery/s5.jpg" data-lightbox="example-set" data-title="conscare">
+                    <a href="img/gallery/s5.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item charity">
-                <img src="img/gallery/s6.jpg" alt="">
+                <img src="img/gallery/s6.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>Robotics: Students used a VEX robot to make a catapult and competed in a friendly game of corn hole.</h2>
-                    <a href="img/gallery/s6.jpg" data-lightbox="example-set" data-title="conscare">
+                    <a href="img/gallery/s6.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item charity biology">
-                <img src="img/gallery/s7.jpg" alt="">
+                <img src="img/gallery/s7.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>Miami Beach Police Athlete League (PAL) partners with S.E.E.K. for Kids’ Get Hip and For Fair</h2>
-                    <a href="img/gallery/s7.jpg" data-lightbox="example-set" data-title="conscare">
+                    <a href="img/gallery/s7.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
             <!-- Single gallery -->
             <div class="single-gallery iso-item charity">
-                <img src="img/gallery/s8.jpg" alt="">
+                <img src="img/gallery/s8.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>Having fun learning science!</h2>
-                    <a href="img/gallery/s8.jpg" data-lightbox="example-set" data-title="conscare">
+                    <a href="img/gallery/s8.JPG" data-lightbox="example-set" data-title="conscare">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
