--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                         <div class="events-img">
                             <img src="img/about/food.JPG" alt="">
                             <div class="events-post-date-info">
-                                <span>12</span> October/18
+                                <span>12</span> October
 
                             </div>
                         </div>
@@ -922,7 +922,7 @@
                         <div class="events-img">
                             <img src="img/about/st2.JPG" alt="">
                             <div class="events-post-date-info">
-                                <span>13</span> October/18
+                                <span>13</span> October
                             </div>
                         </div>
                         <div class="events-content">
@@ -943,14 +943,14 @@
                     <!-- Single events -->
                     <div class="events-info">
                         <div class="events-img">
-                            <img src="img/events/04.jpg" alt="">
+                            <img src="img/events/E4.JPG" alt="">
                             <div class="events-post-date-info">
-                                <span>26</span> feb/18
+                                <span>20</span> October
                             </div>
                         </div>
                         <div class="events-content">
                             <a href="#">
-                                <h2>event tittle here</h2>
+                                <h2>STEMtastic Saturday.</h2>
                             </a>
                             <div class="events-post-meta">
                                 <ul>
