--- a/index.html
+++ b/index.html
@@ -263,14 +263,14 @@
                                 <div class="about-achievement">
                                     <i class="fa fa-diamond" aria-hidden="true"></i>
                                     <h4>Certified company</h4>
-                                    <p> Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+                                    <p>SEEK Foundation is a minority, female, certified owned Florida business.</p>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="about-achievement">
                                     <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                                     <h4>Our experience</h4>
-                                    <p> Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+                                    <p> Our company is built on trust, transparency and for providing credible resources. We have maintained positive, productive relationships with our cliennts that have partnered with us since 2013. </p>
                                 </div>
                             </div>
                         </div>
@@ -288,15 +288,15 @@
                             <div class="col-sm-6">
                                 <div class="about-achievement">
                                     <i class="fa fa-users" aria-hidden="true"></i>
-                                    <h4>Expart volunteers</h4>
-                                    <p> Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+                                    <h4>Volunteers</h4>
+                                    <p> Our volunteers are committed and passionate about our mission. We connect with individuals, throughout Miami Dada and Broward County to create positive change in the life's of others. </p>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="about-achievement">
                                     <i class="fa fa-globe" aria-hidden="true"></i>
                                     <h4>Our goal</h4>
-                                    <p> Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
+                                    <p>We aim to provide children with opportunities who are less fortunate to experience the power of being compassionate about the lives of other people.</p>
                                 </div>
                             </div>
                         </div>
@@ -317,19 +317,19 @@
                         <div class="service-icon">
                             <i class="fa fa-child" aria-hidden="true"></i>
                         </div>
-                        <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor.</p>
-                        <a href="#" class="tem-btn move-eff"><span>contact us</span></a>
+                        <p>Your support will help us serve many communities. Join us today.</p>
+                        <a href="#" class="tem-btn move-eff"><span>Volunteer</span></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <!-- service content -->
                     <div class="service-content">
-                        <h3>adopt a child</h3>
+                        <h3>adopt a STEAM child</h3>
                         <div class="service-icon">
                             <i class="fa fa-globe" aria-hidden="true"></i>
                         </div>
-                        <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor.</p>
-                        <a href="#" class="tem-btn move-eff"><span>join us</span></a>
+                        <p>Students will receive opportunities to access Science, Technology, Engineering, and Mathematics enrichment activities for 1 school year.</p>
+                        <a href="#" class="tem-btn move-eff"><span>contact us</span></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
@@ -339,7 +339,7 @@
                         <div class="service-icon">
                             <i class="fa fa-money" aria-hidden="true"></i>
                         </div>
-                        <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor.</p>
+                        <p>It takes a village to raise a child. We are working to provide better quality of life for underserved children. Donate now and you automatically receive tax exemption document.</p>
                         <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                     </div>
                 </div>
@@ -378,7 +378,7 @@
                             </div>
                             <div class="progress-info">
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
-                                <h3>$11,000 Donated / $89,0000 To Go</h3>
+                                <h3>$1,100 Donated / $10,900 To Go</h3>
                             </div>
                         </div>
                     </div>
@@ -629,7 +629,7 @@
                     <div class="title text-center">
                         <h2>our gallery</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
+                        <p> We pride ourself on capturing memorable moments from various walks of life being engage with our services. Take a tour below.</p>
                     </div>
                 </div>
             </div>
@@ -1157,7 +1157,7 @@
                         <!-- single progress part -->
                         <div class="single-progress-dec text-center">
                             <i class="fa fa-building" aria-hidden="true"></i>
-                            <span class="counter" data-count="240">0</span><span class="plus">+</span>
+                            <span class="counter" data-count="156">0</span><span class="plus">+</span>
                             <h3>Completed Projects</h3>
                         </div>
                     </div>
@@ -1165,15 +1165,15 @@
                         <!-- single progress part -->
                         <div class="single-progress-dec text-center">
                             <i class="fa fa-smile-o" aria-hidden="true"></i>
-                            <span class="counter" data-count="460">0</span><span class="plus">+</span>
-                            <h3>Happy Clients</h3>
+                            <span class="counter" data-count="5">0</span><span class="plus">+</span>
+                            <h3>Corporate Sponsors</h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <!-- single progress part -->
                         <div class="single-progress-dec text-center">
                             <i class="fa fa-trophy" aria-hidden="true"></i>
-                            <span class="counter" data-count="45">0</span><span class="plus">+</span>
+                            <span class="counter" data-count="17">0</span><span class="plus">+</span>
                             <h3>Winning Awards</h3>
                         </div>
                     </div>
@@ -1181,7 +1181,7 @@
                         <!-- single progress part -->
                         <div class="single-progress-dec text-center">
                             <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
-                            <span class="counter" data-count="17">0</span><span class="plus">+</span>
+                            <span class="counter" data-count="6">0</span><span class="plus">+</span>
                             <h3>Years</h3>
                         </div>
                     </div>
