contact form remove

--- a/index.html
+++ b/index.html
@@ -205,17 +205,17 @@
     <section class="donate-wraper">
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-one">
-            <h2> STEMtastic Saturday <br>Teaching kids physics!<br>September 29. </h2>
+            <h2> STEMtastic Saturday <br>Teaching kids physics!<br>October 13. </h2>
             <a href="#donation" class="tem-btn nav-link move-eff"><span>volunteer now</span></a>
         </div>
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-two">
-            <h2>Feeding the community with H.O.M.E.S, Inc. Friday, 10/12/2018.</h2>
+            <h2> STEMtastic Saturday <br>Teaching kids physics!<br>October 20. </h2>
             <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
         </div>
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-three">
-            <h2> STEMtastic Saturday <br>Teaching kids physics!<br>October 13. </h2>
+            <h2> Honeyshine <br>Chemistry in our Food!<br>October 27. </h2>
             <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
         </div>
     </section>
@@ -651,7 +651,7 @@
         </div>
         <div class="iso-content">
             <!-- Single gallery -->
-            <div class="single-gallery iso-item helping charity">
+            <!-- <div class="single-gallery iso-item helping charity">
                 <img src="img/gallery/s1.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>gallery title.</h2>
@@ -659,7 +659,7 @@
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
-            </div>
+            </div> -->
             <!-- Single gallery -->
             <div class="single-gallery iso-item foods events mechanical">
                 <img src="img/gallery/s2.JPG" alt="">
@@ -721,7 +721,7 @@
                 </div>
             </div>
             <!-- Single gallery -->
-            <div class="single-gallery iso-item charity">
+            <!-- <div class="single-gallery iso-item charity">
                 <img src="img/gallery/s8.JPG" alt="">
                 <div class="gallery-lightbox">
                     <h2>Having fun learning science!</h2>
@@ -729,7 +729,7 @@
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!--
@@ -749,7 +749,7 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <!-- section title -->
                     <div class="title text-center">
-                        <h2>our volunteers</h2>
+                        <h2>our staff</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
                     </div>
@@ -760,7 +760,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="single-volunteers">
                         <div class="volunteers-info">
-                            <img src="img/volunteers/01.png" alt="">
+                            <img src="img/volunteers/anike.JPG" alt="">
                             <div class="single-team-con">
                                 <div class="single-team-txt">
                                     <!-- team social links -->
@@ -773,15 +773,15 @@
                                 </div>
                             </div>
                         </div>
-                        <h3>John Doe</h3>
-                        <span>Fund Organaizer</span>
+                        <h3>Anike Sakariyawo</h3>
+                        <span>Founder/Executive Director</span>
                     </div>
                 </div>
                 <!-- Single volunteers -->
                 <div class="col-md-3 col-sm-6">
                     <div class="single-volunteers">
                         <div class="volunteers-info">
-                            <img src="img/volunteers/02.png" alt="">
+                            <img src="img/volunteers/ambry.JPG" alt="">
                             <div class="single-team-con">
                                 <div class="single-team-txt">
                                     <!-- team social links -->
@@ -794,15 +794,15 @@
                                 </div>
                             </div>
                         </div>
-                        <h3>lily adams</h3>
-                        <span>Fund Organaizer</span>
+                        <h3>Ambry Johnson</h3>
+                        <span>Program Manager</span>
                     </div>
                 </div>
                 <!-- Single volunteers -->
                 <div class="col-md-3 col-sm-6">
                     <div class="single-volunteers">
                         <div class="volunteers-info">
-                            <img src="img/volunteers/03.png" alt="">
+                            <img src="img/volunteers/shirl.JPG" alt="">
                             <div class="single-team-con">
                                 <div class="single-team-txt">
                                     <!-- team social links -->
@@ -815,15 +815,15 @@
                                 </div>
                             </div>
                         </div>
-                        <h3>Georjina Parker</h3>
-                        <span>Fund Organaizer</span>
+                        <h3>Shirley Garrison</h3>
+                        <span>Secretary</span>
                     </div>
                 </div>
                 <!-- Single volunteers -->
                 <div class="col-md-3 col-sm-6">
                     <div class="single-volunteers">
                         <div class="volunteers-info">
-                            <img src="img/volunteers/04.png" alt="">
+                            <img src="img/volunteers/terr.jpg" alt="">
                             <div class="single-team-con">
                                 <div class="single-team-txt">
                                     <!-- team social links -->
@@ -836,8 +836,8 @@
                                 </div>
                             </div>
                         </div>
-                        <h3>Olivia Doe</h3>
-                        <span>Fund Organaizer</span>
+                        <h3>Terri-Ann Lott</h3>
+                        <span>Treasurer</span>
                     </div>
                 </div>
             </div>
@@ -1409,12 +1409,12 @@
         contact part start
         ============================
     -->
-    <section class="contact-area section-padding" id="contact">
+    <!-- <section class="contact-area section-padding" id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
-                    <!-- section title -->
-                    <div class="title text-center">
+                <div class="col-sm-8 col-sm-offset-2"> -->
+    <!-- section title -->
+    <!-- <div class="title text-center">
                         <h2>contact us</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
@@ -1423,9 +1423,9 @@
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-                    <div class="contact-form">
-                        <!-- contact form -->
-                        <form action="mail.php" method="POST" id="active-contact-form">
+                    <div class="contact-form"> -->
+    <!-- contact form -->
+    <!-- <form action="mail.php" method="POST" id="active-contact-form">
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <input class="form-control" type="text" name="name" placeholder="Name" required>
@@ -1458,7 +1458,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--
         ============================
         contact part end
