--- a/index.html
+++ b/index.html
@@ -749,9 +749,11 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <!-- section title -->
                     <div class="title text-center">
-                        <h2>our staff</h2>
+                        <h2>meet our team</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
+                        <p>
+                            We are a passion driven group of people with over 30 years of teaching experiences. Our team believes that we can maintain and build new diverse programs by developing more relationships and partnership to produce innovative thinkers and self advocacy
+                            skills amongst the youth. We will continue to work relentlessly to provide effective services to children, parents, and community stakeholders.</p>
                     </div>
                 </div>
             </div>
@@ -862,7 +864,7 @@
                     <div class="title text-center">
                         <h2>Upcoming Events</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
+                        <p>Learn about our upcoming events to stay engage, active, and connected.</p>
                     </div>
                 </div>
             </div>
@@ -1022,12 +1024,12 @@
         donation part start
         ============================
     -->
-    <section class="donation-area parallax" id="donation">
+    <!-- <section class="donation-area parallax" id="donation">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-md-offset-0">
-                    <!-- donate form -->
-                    <div class="donate-form">
+                <div class="col-md-8 col-md-offset-0"> -->
+    <!-- donate form -->
+    <!-- <div class="donate-form">
                         <div class="form-group col-md-12">
                             <h3>How much would you like to donate?</h3>
                             <div class="select-amount">
@@ -1064,7 +1066,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--
         ============================
         donation part end
