--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                         <div class="client-info">
                             <img src="img/clients/01.jpg" alt="">
                             <div class="client-meta-info">
-                                <h3>Catherine Grace</h3>
+                                <h3>Dwayne Lewis</h3>
                                 <span>CEO apple.inc</span>
                             </div>
                         </div>
