--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <h1><span>Rigorous</span> Education through S.T.E.M.</h1>
                                 <p class="fadeIn animated animated-08s">Science, Technology, Engineering, & Mathematic Programs.</p>
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
-                                <a href="#" class="tem-btn move-eff"><span>join volunteer</span></a>
+                                <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>join volunteer</span></a>
                             </div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                             <div class="single-banner-txt">
                                 <h1><span>Feeding</span> the homeless and <span>hungry.</span></h1>
                                 <p>No one should encounter going a day without food.</p>
-                                <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+                                <a href="" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                                 <a href="#" class="tem-btn move-eff wmBox" data-popup="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1"><span>play video</span></a>
                             </div>
                         </div>
@@ -206,17 +206,17 @@
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-one">
             <h2> STEMtastic Saturday <br>Teaching kids physics!<br>October 13. </h2>
-            <a href="#donation" class="tem-btn nav-link move-eff"><span>volunteer now</span></a>
+            <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn nav-link move-eff"><span>volunteer now</span></a>
         </div>
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-two">
             <h2> STEMtastic Saturday <br>Teaching kids physics!<br>October 20. </h2>
-            <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+            <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn nav-link move-eff"><span>volunteer now</span></a>
         </div>
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-three">
             <h2> Honeyshine <br>Chemistry in our Food!<br>October 27. </h2>
-            <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+            <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn nav-link move-eff"><span>volunteer now</span></a>
         </div>
     </section>
     <!--
@@ -318,7 +318,7 @@
                             <i class="fa fa-child" aria-hidden="true"></i>
                         </div>
                         <p>Your support will help us serve many communities. Join us today.</p>
-                        <a href="#" class="tem-btn move-eff"><span>Volunteer</span></a>
+                        <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>Volunteer</span></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
@@ -329,7 +329,7 @@
                             <i class="fa fa-globe" aria-hidden="true"></i>
                         </div>
                         <p>Students will receive opportunities to access Science, Technology, Engineering, and Mathematics enrichment activities for 1 school year.</p>
-                        <a href="#" class="tem-btn move-eff"><span>contact us</span></a>
+                        <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top" class="tem-btn move-eff"><span>contact us</span></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
